NPII-74 Fix for mis-aligned megamenu contents

--- a/blocks/header/header.scss
+++ b/blocks/header/header.scss
@@ -185,18 +185,18 @@
 		.usa-nav__submenu {
 			width: fit-content;
 			min-width: px-to-rem(350px);
-
+			
 			a {
 				width: fit-content;
 			}
-
+			
 			&:has(.grid-col:nth-child(2)) {
 				min-width: px-to-rem(500px);
 			}
-
+			
 			&.usa-megamenu {
-				width: calc(100% + #{units($theme-site-margins-width * 2)});
-				margin-left: -1 * units($theme-site-margins-width);
+				width: 100%;
+				margin: 0;
 
 				.usa-nav__submenu-item { // grid handles horizontal spacing
 					a {
